--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -18,11 +18,16 @@ h1, h2                      { margin: 10px 0 25px 0; }
 h1                          { font-size: 48px; line-height: 52px; }
 h2                          { font-size: 36px; line-height: 40px; }
 
+/* colors */
+.muted                      { color: rgb(153, 153, 153); }
+
+
 /* layout elements */
 div.container               { width: 740px; margin: 48px auto; padding: 0; }
 div.header                  { float: left; }
-div.navigation              { float: left; }
-div.navigation a            { text-decoration: none; 
+div.navigation              { float: right; }
+div.navigation a, div.header a
+                            { text-decoration: none; 
                               font-size: 22px; 
                               padding: 10px;
                             }
