--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1,7 +1,6 @@
 /* general style */
 body    { font: 18px/25px 'Palatino', 'Palatino Linotype', 'Georgia', serif;
-          margin: 0; padding: 0; 
-        }
+          margin: 0; padding: 0; }
 a       { /*color: #432165;*/ color: #234764; }
 a:hover { color: #3b185f; background: #f9f8fa; }
 
@@ -26,11 +25,10 @@ h2                          { font-size: 36px; line-height: 40px; }
 div.container               { width: 740px; margin: 48px auto; padding: 0; }
 div.header                  { float: left; }
 div.navigation              { float: right; }
-div.navigation a, div.header a
-                            { text-decoration: none; 
-                              font-size: 22px; 
-                              padding: 10px;
-                            }
+div.header a, div.navigation a	{ text-decoration: none; 
+				  font-size: 22px; 
+				  padding: 10px;
+				}
 
 div.separator               {border-bottom: 1px dotted #ddd; padding-bottom: 42px;
                               margin-bottom: 42px; font-size: 16px; color: #888;
@@ -63,6 +61,7 @@ h1 + p.date                     { margin-top: -20px; font-style: italic; }
 pre, code, tt   { font-family: 'Consolas', 'Deja Vu Sans Mono',
                   'Bitstream Vera Sans Mono', 'Monaco', 'Courier New';
                   font-size: 0.85em;
+                  overflow: auto;
                 }
 pre             { /*line-height: 1.3;*/ border: 1px solid #ddd; padding: 10px;
                   /* background: #fafafa; */
@@ -116,10 +115,10 @@ p.tags          { text-align: right; font-style: italic; }
 ul.tagcloud     { font-size: 16px; margin: 36px 0; padding: 0;
                   list-style: none; }
 ul.tagcloud li  { margin: 0; padding: 0 10px; display: inline; }
-li.tag-1           {font-size: 100.0%;}
-li.tag-2           {font-size: 130.0%;}
-li.tag-3           {font-size: 160.0%;}
-li.tag-4           {font-size: 200.0%;}
+li.tag-1           {font-size: 200.0%;}
+li.tag-2           {font-size: 160.0%;}
+li.tag-3           {font-size: 130.0%;}
+li.tag-4           {font-size: 100.0%;}
 
 /* latex math */
 span.math img   { margin-bottom: -7px; }
