--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1,6 +1,10 @@
 /* general style */
-body    { font: 18px/25px 'Palatino', 'Palatino Linotype', 'Georgia', serif;
-          margin: 0; padding: 0; }
+body    {
+    font: 18px/25px 'Palatino', 'Palatino Linotype', 'Georgia', serif;
+    margin: 0; padding: 0; 
+    background-image: url(../noise.png);
+}
+
 a       { /*color: #432165;*/ color: #234764; }
 a:hover { color: #3b185f; background: #f9f8fa; }
 
