--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -20,7 +20,7 @@
 body {
     background: #f2f3f3;
     color: #000305;
-    font-size: 14px;/*87.5%; /* Base font size: 14px */
+    font-size: 1.1em; /* Base font size: 1.1em */
     font-family: 'Trebuchet MS', Trebuchet, 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     line-height: 1.429;
     margin: 0;
@@ -391,6 +391,7 @@ img {
 		/* Icons */
 		#extras .social a {background-size: 18px;}
 		#extras .social a[href*='facebook.com'] {background-image: url('../images/icons/facebook.png');}
+		#extras .social a[href*='mail'] {background-image: url('../images/icons/email.png');}
 		#extras .social a[href*='github.com'], 
 		#extras .social a[href*='git.io'] {background-image: url('../images/icons/github.png');}
 		#extras .social a[href*='plus.google.com'] {background-image: url('../images/icons/google-plus.png');}
